<resources>
    <string name="app_name">Recipe</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="logout">LOGOUT</string>
    <string name="current_password_required">Current Password (Required)</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="update_username">Update Username</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="update_email">Update Email</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="update_password">Update Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="ingredients_comma_separated">Ingredients (comma-separated)</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="cooking_time_minutes">Cooking Time (minutes)</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="timestamp">Timestamp</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="remove">Remove</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account_login">ALREADY HAVE AN ACCOUNT? LOGIN</string>
    <string name="review">Review</string>
    <string name="write_your_review_here">Write your review here</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="favorite">Favorite</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="add_review">Add Review</string>
    <string name="schedule_recipe">Schedule Recipe</string>
    <string name="show_reviews">Show Reviews</string>
    <string name="scheduled_recipe_notifications">Scheduled Recipe Notifications</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="filter">Filter</string>
    <string name="change_image">Change Image</string>
    <string name="meal_categories">Meal Categories</string>
    <string name="create_recipe">CREATE RECIPE</string>

    <string-array name="meal_categories">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
        <item>Dessert</item>
    </string-array>
</resources>