<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Titill á umsögn -->
    <TextView
        android:id="@+id/reviewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"/>

    <!-- Stjörnugjöf -->
    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1.0"
        android:layout_gravity="center_horizontal"/>

    <!-- Umsagnardálkur -->
    <EditText
        android:id="@+id/commentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_your_review_here"
        android:padding="8dp"
        android:background="@android:drawable/editbox_background"
        android:minHeight="100dp"
        android:gravity="top"
        android:inputType="textMultiLine"/>

    <!-- Hnappar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="16dp">

        <!-- Vista umsögn
        Þarf þetta að vera? Þegar breytt er umsögn...-->
        <Button
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:backgroundTint="@color/teal_700"/>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

        <!-- Eyða hnappur-->
        <Button
            android:id="@+id/deleteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:backgroundTint="@android:color/holo_red_dark"/>

        <!-- Hætta við hnappur -->
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:backgroundTint="@android:color/darker_gray"/>
    </LinearLayout>

</LinearLayout>
